--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.techempower.com/benchmarks/#section=data-r16">Web Framework Benchmarks</a>
+                                    <a href="https://www.microsoft.com/en-us/research/blog/microsoft-unveils-faster-key-value-store-large-state-management/">Faster – A key-value store for large state management</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17254152">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17267403">
                                         
-                                            112 comments
+                                            33 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ksec">ksec</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528359227"
+                                            href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528477272"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     118 points
                                 </span>
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/articles/facebook-gave-some-companies-access-to-additional-data-about-users-friends-1528490406">Facebook Gave Some Companies Access to Additional Data About Users’ Friends</a>
+                                    <a href="https://www.techempower.com/benchmarks/#section=data-r16">Web Framework Benchmarks</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17269552">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17254152">
                                         
-                                            52 comments
+                                            112 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=radicaldreamer">radicaldreamer</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528490893"
+                                            href="https://news.ycombinator.com/user?id=ksec">ksec</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528359227"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    117 points
+                                    118 points
                                 </span>
                             </td>
                         </tr>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528514403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528515004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
