--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.destroyallsoftware.com/blog/2017/the-biggest-and-weirdest-commits-in-linux-kernel-git-history">The Biggest and Weirdest Commits in Linux Kernel Git History (2017)</a>
+                                    <a href="https://akr.am/blog/posts/gitlab-isnt-really-open-source">GitLab Isn’t Really Open-Source</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265151">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17229940">
                                         
-                                            62 comments
+                                            152 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=swsieber">swsieber</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528464958"
+                                            href="https://news.ycombinator.com/user?id=thefilmore">thefilmore</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528132632"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    256 points
+                                    258 points
                                 </span>
                             </td>
                         </tr>
@@ -341,13 +341,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17267735">
                                         
-                                            172 comments
+                                            174 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=johnny313">johnny313</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528478967"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    248 points
+                                    250 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528518003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528518604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
