--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/me-shaon/GLWTPL">“Good Luck with That” Public License</a>
+                                    <a href="https://developer.apple.com/videos/play/wwdc2018/715/">Network.framework: A modern alternative to sockets</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17247779">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265288">
                                         
-                                            50 comments
+                                            119 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ihuman">ihuman</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528298012"
+                                            href="https://news.ycombinator.com/user?id=pjmlp">pjmlp</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528465660"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     174 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528523403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528524004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
