--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/platform/amp/2018/6/5/17424770/asus-zenbook-pro-screenpad-specs-release-date-price-computex-2018">Asus replaced the touchpad on its new ZenBook Pro with a 5.5-inch touchscreen</a>
+                                    <a href="https://www.dannyguo.com/blog/the-decline-of-the-macbook-pro/">The Decline of the MacBook Pro</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271126">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17266492">
                                         
-                                            45 comments
+                                            271 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lando2319">lando2319</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528510212"
+                                            href="https://news.ycombinator.com/user?id=dguo">dguo</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528472263"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    51 points
+                                    198 points
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=david4096">david4096</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528446367"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    265 points
+                                    266 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=misnamed">misnamed</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528503075"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    61 points
+                                    63 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528477272"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    127 points
+                                    128 points
                                 </span>
                             </td>
                         </tr>
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=codingcoop">codingcoop</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528466591"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    153 points
+                                    155 points
                                 </span>
                             </td>
                         </tr>
@@ -509,7 +509,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17269075">
                                         
-                                            67 comments
+                                            66 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=abhisuri97">abhisuri97</a></strong> &nbsp;•&nbsp;
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=zeveb">zeveb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528484911"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    84 points
+                                    85 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528524605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528525204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
