--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -503,19 +503,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-08/tech-companies-still-aren-t-hiring-black-workers">Tech Companies Still Aren’t Hiring Black Workers</a>
+                                    <a href="https://jalopnik.com/how-special-paint-on-the-hood-of-the-world-war-ii-jeep-1826657149">Special Paint on the Hood of the World War II Jeep Could Detect Mustard Gas</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17264923">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271430">
                                         
-                                            102 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mozumder">mozumder</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528463595"
+                                            href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528515962"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    48 points
+                                    8 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gizmodo.com/apple-isnt-your-friend-1826611293">Apple Isn't Your Friend</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-08/tech-companies-still-aren-t-hiring-black-workers">Tech Companies Still Aren’t Hiring Black Workers</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17269285">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17264923">
                                         
-                                            5 comments
+                                            102 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ourmandave">ourmandave</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528488695"
+                                            href="https://news.ycombinator.com/user?id=mozumder">mozumder</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528463595"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    23 points
+                                    48 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528525803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528526404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
