--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/radareorg/cutter">Cutter – A Qt and C++ GUI for Radare2 reverse engineering framework</a>
+                                    <a href="https://www.factorio.com/blog/post/fff-246">Ok-Cancel versus Cancel-Ok</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17252585">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17269938">
                                         
-                                            49 comments
+                                            167 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=xvilka">xvilka</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528335610"
+                                            href="https://news.ycombinator.com/user?id=zaksoup">zaksoup</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528494042"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     333 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528525803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528526404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
