--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.microsoft.com/en-us/research/blog/microsoft-unveils-faster-key-value-store-large-state-management/">Faster – A key-value store for large state management</a>
+                                    <a href="https://blog.github.com/2018-06-07-what-laser-cutting-taught-me-about-contribution-graphs/">Life as a GitHub Intern: What laser cutting taught me about contribution graphs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17267403">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17258275">
                                         
-                                            33 comments
+                                            37 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528477272"
+                                            href="https://news.ycombinator.com/user?id=brianllamar">brianllamar</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528393615"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    131 points
+                                    132 points
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17264395">
                                         
-                                            68 comments
+                                            69 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=valeg">valeg</a></strong> &nbsp;•&nbsp;
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528528205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528528804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
