--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/technology/2018/jun/05/facial-recognition-us-mexico-border-crossing">US government to use facial recognition technology at Mexico border crossing</a>
+                                    <a href="http://blog.jamesdbloom.com/JVMInternals.html">JVM Internals</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17255785">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271913">
                                         
-                                            99 comments
+                                            11 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528380028"
+                                            href="https://news.ycombinator.com/user?id=flying_sheep">flying_sheep</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528527835"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    124 points
+                                    125 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528543204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528543803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
