--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-07/bernanke-says-u-s-economy-faces-wile-e-coyote-moment-in-2020">Bernanke Says U.S. Economy Faces a ‘Wile E. Coyote’ Moment in 2020</a>
+                                    <a href="https://99percentinvisible.org/article/slip-coaches-back-when-british-express-trains-detached-passenger-cars-at-speed/">Slip Coaches: Back When British Express Trains Detached Passenger Cars at Speed</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265781">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17270749">
                                         
-                                            208 comments
+                                            40 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=simulate">simulate</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528468414"
+                                            href="https://news.ycombinator.com/user?id=misnamed">misnamed</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528503075"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     111 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528544405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528545003" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
