--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://blog.jamesdbloom.com/JVMInternals.html">JVM Internals</a>
+                                    <a href="https://www.bloomberg.com/view/articles/2018-06-07/america-s-startup-scene-is-looking-anemic">America's Startup Scene Is Looking Anemic</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17271913">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17255569">
                                         
-                                            11 comments
+                                            248 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=flying_sheep">flying_sheep</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528527835"
+                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528378227"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    146 points
+                                    147 points
                                 </span>
                             </td>
                         </tr>
@@ -557,7 +557,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17264395">
                                         
-                                            69 comments
+                                            70 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=valeg">valeg</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528546205" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528546803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
