--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.toptal.com/cross-platform/haxe-language-cross-platform">Haxe: Cross-Platform Development's Best-Kept Secret</a>
+                                    <a href="https://www.dannyguo.com/blog/the-decline-of-the-macbook-pro/">The Decline of the MacBook Pro</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17255490">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17266492">
                                         
-                                            41 comments
+                                            275 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=kevin_bloch">kevin_bloch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528377578"
+                                            href="https://news.ycombinator.com/user?id=dguo">dguo</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528472263"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     200 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528548004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528548604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
